# fine-tuning-demo

./: Training Set - Sheet1.csv  all_cleaned_paragraphs.json  cleaned_paragraphs.json  cleaned_paragraphs2.json  cleaner.py  index.py  paragraph_extractor.py  paragraphs.json  paragraphs2.json  pyproject.toml  training_data_tmu.json  urls.json  web_scraper.py
prompts_completion_maker/: Q10_bot.json  Q11_bot.json  Q12_bot.json  Q13_bot.json  Q14_bot.json  Q15_bot.json  Q16_bot.json  Q17_bot.json  Q18_bot.json  Q19_bot.json  Q1_what_should_i_read.json  Q20_bot.json  Q21_bot.json  Q22_bot.json  Q23_bot.json  Q24_bot.json  Q25_bot.json  Q26_bot.json  Q27_bot.json  Q28_bot.json  Q29_bot.json  Q2_max_rate.json  Q30_bot.json  Q31_bot.json  Q32_bot.json  Q33_bot.json  Q34_bot.json  Q35_bot.json  Q36_bot.json  Q37_bot.json  Q38_bot.json  Q39_bot.json  Q3_transfer_between_houses.json  Q40_bot.json  Q41_bot.json  Q42_bot.json  Q43_bot.json  Q44_bot.json  Q45_bot.json  Q46_bot.json  (+56 more)
prompts_completion_maker/Q&As/: convertor.py
prompts_completion_maker/Q&As/from_Q&A/: questions_0.json  questions_1.json  questions_11.json  questions_12.json  questions_13.json  questions_14.json  questions_15.json  questions_16.json  questions_17.json  questions_18.json  questions_19.json  questions_2.json  questions_20.json  questions_21.json  questions_22.json  questions_3.json  questions_4.json  questions_5.json  questions_6.json  questions_7.json  questions_8.json  questions_9.json
prompts_completion_maker/Q&As/initial/: 0.json  1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  (+1 more)
(+5 files in other folders)
